Add content and img for main page

--- a/app/blocks/_featured__slider.html
+++ b/app/blocks/_featured__slider.html
@@ -6,7 +6,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="">
+										<img src="img/cart/02.jpg" alt="#">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -44,7 +44,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="">
+										<img src="img/cart/01.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -62,7 +62,7 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker 
+										KRUPS Grind 
 										<span class="cart__body-price">$163.01</span>
 									</a>
 									<div class="cart__body-footer">
