--- a/app/index.html
+++ b/app/index.html
@@ -13,37 +13,15 @@
 				<div class="main-slider">
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<a href="#">
-								<img src="img/main-slider/01.jpg" alt="">
-								<div class="main-slider__content">
-									<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-									<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-									<a class="main-slider__content-btn btn" href="#">View more</a>
-								</div>
+							<a href="detail.html">
+								<img src="img/main-slider/01.jpg" alt="#">
 							</a>
 						</div>
 					</div>
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<a href="#">
-								<img src="img/main-slider/03.png" alt="">
-								<div class="main-slider__content">
-									<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-									<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-									<a class="main-slider__content-btn btn" href="#">View more</a>
-								</div>
-							</a>
-						</div>
-					</div>
-					<div class="main-slider__item">
-						<div class="main-slider__image">
-							<a href="#">
-								<img src="img/01.jpg" alt="">
-								<div class="main-slider__content">
-									<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-									<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-									<a class="main-slider__content-btn btn" href="#">View more</a>
-								</div>
+							<a href="detail.html">
+								<img src="img/main-slider/02.jpg" alt="#">
 							</a>
 						</div>
 					</div>
@@ -54,50 +32,50 @@
 					<div class="information__row">
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
+								<a href="detail.html">
 									<img class="information__item-img" src="img/information/01.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column information__column--bg">
 							<div class="information__item information__item--bg">
-								<a href="#">
-									<img class="information__item-img" src="img/information/03.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/11.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
+								<a href="detail.html">
 									<img class="information__item-img" src="img/information/04.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/05.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/09.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/06.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/10.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/04.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/02.jpg" alt="">
 								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<a href="#">
-									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="detail.html">
+									<img class="information__item-img" src="img/information/07.jpg" alt="">
 								</a>
 							</div>
 						</div>
@@ -128,8 +106,8 @@
 									<img src="img/icons/checked_truck.png" alt="">
 								</div>
 								<div class="policy__item-body">
-									<div class="policy__item-title">Freeshipping on order over $100 </div>
-									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<div class="policy__item-title">Products that ship to you</div>
+									<div class="policy__item-descr">Find top products that ship to you.</div>
 									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
@@ -141,7 +119,7 @@
 								</div>
 								<div class="policy__item-body">
 									<div class="policy__item-title">10% off the bill</div>
-									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<div class="policy__item-descr">Low prices and amazing deals every day.</div>
 									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
@@ -153,7 +131,7 @@
 								</div>
 								<div class="policy__item-body">
 									<div class="policy__item-title">Security payment</div>
-									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<div class="policy__item-descr">We protect your personal payment information.</div>
 									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
@@ -165,7 +143,7 @@
 								</div>
 								<div class="policy__item-body">
 									<div class="policy__item-title">live Support</div>
-									<div class="policy__item-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text </div>
+									<div class="policy__item-descr">24/7 customer service. You can email, chat, or call us any time.</div>
 									<a class="policy__item-btn btn policy__item-btn--black" href="#">READ MORE</a>
 								</div>
 							</div>
@@ -239,7 +217,7 @@
 							<a href="#">
 								<div class="testimonials__box">
 									<div class="testimonials__image">
-										<img src="img/testimonial/02.jpg" alt="">
+										<img src="img/testimonial/03.jpg" alt="">
 									</div>
 									<div class="testimonials__body">
 										<div class="testimonials__body-text">“Bought this after my second Keurig brewer went on the fritz. I wasn't willing to pay another hundred-and-something dollars for a brewer that only brews expensive single cups and only lasts 2-3 years. This seemed in line with what I was after and the reviews were very positive -- not to mention, the price was right -- so I went for it. I've been using it every day for 2 weeks now and I've been very happy with it.”</div>
@@ -252,11 +230,11 @@
 							<a href="#">
 								<div class="testimonials__box">
 									<div class="testimonials__image">
-										<img src="img/testimonial/03.jpg" alt="">
+										<img src="img/testimonial/06.jpg" alt="">
 									</div>
 									<div class="testimonials__body">
-										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
-										<div class="testimonials__body-name">SARA CONER</div>
+										<div class="testimonials__body-text">“Absolutely fantastic coffee machine, had been worried about coffee temperature but really didn't need to, coffee has been piping hot everytime. So glad that I went for the integrated milk frother, so easy to keep in the fridge and easily attached when required. All around extremely pleased with my purchase and don't know how I got on without it!”</div>
+										<div class="testimonials__body-name">Lucas M</div>
 									</div>
 								</div>
 							</a>
@@ -268,7 +246,7 @@
 										<img src="img/testimonial/04.jpg" alt="">
 									</div>
 									<div class="testimonials__body">
-										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
+										<div class="testimonials__body-text">“I had a De'Longhi Magnifica & decided to upgrade to a Bean to cup machine with automatic milk frother. So I bought a De'Longhi Prima Donna Exclusive. I was thoroughly disappointed with the coffee quality. This machine is 1/2 the price of the Prima Donna. It has produced perfect cappuccinos every single time. I love the timer & cleaning functions. Very slick 1 button operation. No need to hold your pitcher up against a frothing wand. With a Health Service Discounts Card, I got 5% cashback too!”</div>
 										<div class="testimonials__body-name">SARA CONER</div>
 									</div>
 								</div>
@@ -278,11 +256,11 @@
 							<a href="#">
 								<div class="testimonials__box">
 									<div class="testimonials__image">
-										<img src="img/testimonial/05.png" alt="">
+										<img src="img/testimonial/05.jpg" alt="">
 									</div>
 									<div class="testimonials__body">
-										<div class="testimonials__body-text">“ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled . ”</div>
-										<div class="testimonials__body-name">SARA CONER</div>
+										<div class="testimonials__body-text">“I had a model before this machine so this is definitely an upgrade. Very easy to use and tastes perfect! Definitely recommending to anyone who loves a coffee with milk!”</div>
+										<div class="testimonials__body-name">Citi-Zen</div>
 									</div>
 								</div>
 							</a>
@@ -317,90 +295,72 @@
 						<div class="news__slider-item">
 							<div class="news__item">
 								<div class="news__item-image">
-									<a href="">
-										<img src="img/news/01.jpg" alt="">
+									<a href="blog-single.html">
+										<img src="img/blog/01.jpg" alt="">
 										<div class="news__item-date">
-											21
-											<span>May</span>
+											11
+											<span>July</span>
 										</div>
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer</div>
-									<a class="news__item-btn btn" href="#">Read more</a>
+									<a class="news__item-title" href="blog-single.html">How To Make a Latte at Home Without an Espresso Machine <span>|  By KOMODOART</span></a>
+									<div class="news__item-text">We love our iced coffee in the summer, but fall and winter belong to the latte. We love to sit inside on a chilly day with a hot, frothy latte or cappuccino. But a latte shouldn’t just be a coffee shop treat.</div>
+									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
 							</div>
 						</div>
 						<div class="news__slider-item">
 							<div class="news__item">
 								<div class="news__item-image">
-									<a href="#">
-										<img src="img/news/02.jpg" alt="">
+									<a href="blog-single.html">
+										<img src="img/blog/02.jpg" alt="">
 										<div class="news__item-date">
-											21
-											<span>May</span>
+											8
+											<span>July</span>
 										</div>
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
-									<a class="news__item-btn btn" href="#">Read more</a>
+									<a class="news__item-title" href="blog-single.html">How to Make Espresso <span>|  By KOMODOART</span></a>
+									<div class="news__item-text">So you’ve decided that you’re ready to make espresso. A noble endeavor, surely, and one not to be undertaken lightly. Although espresso preparation has evolved almost constantly since the first espresso machine was patented over a century ago, there are a few pillars of the process that we should adhere to if you’re hoping to make consistently delicious coffee.</div>
+									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
 							</div>
 						</div>
 						<div class="news__slider-item">
 							<div class="news__item">
 								<div class="news__item-image">
-									<a href="#">
-										<img src="img/news/03.jpg" alt="">
+									<a href="blog-single.html">
+										<img src="img/blog/03.jpg" alt="">
 										<div class="news__item-date">
-											21
-											<span>May</span>
+											3
+											<span>July</span>
 										</div>
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
-									<a class="news__item-btn btn" href="#">Read more</a>
+									<a class="news__item-title" href="blog-single.html">How to Choose a Coffee Maker <span>|  By KOMODOART</span></a>
+									<div class="news__item-text">Let me start off by saying that you most absolutely need a coffee maker. Starting your day with a bad-tasting cup of coffee is much worse than not drinking your morning coffee! So knowing what to buy and how is the first step to preparing a steaming cup at home.</div>
+									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
 							</div>
 						</div>
 						<div class="news__slider-item">
 							<div class="news__item">
 								<div class="news__item-image">
-									<a href="#">
-										<img src="img/news/05.jpg" alt="">
+									<a href="blog-single.html">
+										<img src="img/blog/05.jpg" alt="">
 										<div class="news__item-date">
-											21
-											<span>May</span>
+											1
+											<span>July</span>
 										</div>
 									</a>
 								</div>
 								<div class="news__item-body">
-									<a class="news__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
-									<a class="news__item-btn btn" href="#">Read more</a>
-								</div>
-							</div>
-						</div>
-						<div class="news__slider-item">
-							<div class="news__item">
-								<div class="news__item-image">
-									<a href="#">
-										<img src="img/news/04.jpg" alt="">
-										<div class="news__item-date">
-											21
-											<span>May</span>
-										</div>
-									</a>
-								</div>
-								<div class="news__item-body">
-									<a class="news__item-title" href="#">2016 Summer Women Chiffon Short <span>|  By KOMODOART</span></a>
-									<div class="news__item-text">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer ...</div>
-									<a class="news__item-btn btn" href="#">Read more</a>
+									<a class="news__item-title" href="blog-single.html">How to pick between bean-to-cup, pod and espresso models <span>|  By KOMODOART</span></a>
+									<div class="news__item-text">With the great British public drinking an impressive 95 million cups of coffee a day, it’s fair to say we’re a nation of coffee lovers. For those who shun the instant stuff, an at-home coffee machine may be worth the investment, as you can create barista-style coffees at the touch of a button.</div>
+									<a class="news__item-btn btn" href="blog-single.html">Read more</a>
 								</div>
 							</div>
 						</div>
