Add content and images for all-categories and footer

--- a/app/all-categories.html
+++ b/app/all-categories.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	@@include('blocks/_head.html',{
-		"title":"Home"
+		"title":"All categories"
 	})
 <body>
 
@@ -21,12 +21,12 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="shop-col.html">
-										<img src="img/all-categories/02.jpg" alt="">
+										<img src="img/all-categories/13.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Color coffee maker</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Coffee Machines</a>
+									<div class="all-categories__body-descr">Discover small domestic coffee machines that give you professional results every morning.</div>
 								</div>
 							</div>
 						</div>
@@ -38,8 +38,8 @@
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Krups Espresso Machine Launch</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Espresso Machine & Coffeemaker Combos</a>
+									<div class="all-categories__body-descr">Discover the best Espresso Machine & Coffeemaker Combos in Best Sellers.</div>
 								</div>
 							</div>
 						</div>
@@ -47,12 +47,12 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="shop-col.html">
-										<img src="img/all-categories/01.jpg" alt="">
+										<img src="img/all-categories/14.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Accessories coffee</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Single-Serve Brewers</a>
+									<div class="all-categories__body-descr">A single-serve coffee maker gives you the convenience of making one cup of coffee at a time just the way you like it.</div>
 								</div>
 							</div>
 						</div>
@@ -60,12 +60,12 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="shop-col.html">
-										<img src="img/all-categories/03.png" alt="">
+										<img src="img/all-categories/17.jpg" alt="#">
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Drip Coffee Makers</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Disposable Coffee Filters</a>
+									<div class="all-categories__body-descr">Coffee filters are available in a range of different materials, including the ever-popular single-use paper filters.</div>
 								</div>
 							</div>
 						</div>
@@ -73,12 +73,12 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="shop-col.html">
-										<img src="img/all-categories/04.jpg" alt="">
+										<img src="img/all-categories/18-(3).jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Stovetop Espresso Coffee </a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Coffee Presses</a>
+									<div class="all-categories__body-descr">This insulated, double-walled French press will maintain your coffee's temperature for at least one hour.</div>
 								</div>
 							</div>
 						</div>
@@ -86,51 +86,12 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="shop-col.html">
-										<img src="img/all-categories/11.jpg" alt="">
+										<img src="img/all-categories/19-(1).jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Zarafina TH1000 Tea Maker</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-								</div>
-							</div>
-						</div>
-						<div class="all-categories__column">
-							<div class="all-categories__item">
-								<div class="all-categories__img">
-									<a href="shop-col.html">
-										<img src="img/all-categories/06.png" alt="">
-									</a>
-								</div>
-								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Williams Food Equipment</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-								</div>
-							</div>
-						</div>
-						<div class="all-categories__column">
-							<div class="all-categories__item">
-								<div class="all-categories__img">
-									<a href="shop-col.html">
-										<img src="img/all-categories/07.jpg" alt="">
-									</a>
-								</div>
-								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Vitale Bean to Cup Tanked Coffee</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-								</div>
-							</div>
-						</div>
-						<div class="all-categories__column">
-							<div class="all-categories__item">
-								<div class="all-categories__img">
-									<a href="shop-col.html">
-										<img src="img/all-categories/08.jpg" alt="">
-									</a>
-								</div>
-								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Toddy T2N Cold Brew System</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Reusable Coffee Filters</a>
+									<div class="all-categories__body-descr">There are various materials that are used to make reusable coffee filters.</div>
 								</div>
 							</div>
 						</div>
@@ -142,8 +103,8 @@
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Melita express yellow al coffee</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Pour Over Coffee Makers</a>
+									<div class="all-categories__body-descr">Choosing The Best Pour Over Coffee Maker.</div>
 								</div>
 							</div>
 						</div>
@@ -151,12 +112,51 @@
 							<div class="all-categories__item">
 								<div class="all-categories__img">
 									<a href="shop-col.html">
-										<img src="img/all-categories/10.jpg" alt="">
+										<img src="img/all-categories/08.jpg" alt="">
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Drip Coffee Makers	</a>
-									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+									<a class="all-categories__body-title" href="shop-col.html">Coffee Machine Accessories</a>
+									<div class="all-categories__body-descr">Coffee Parts was built on a dream to carry the best, most amazing coffee accessories from all over the world.</div>
+								</div>
+							</div>
+						</div>
+						<div class="all-categories__column">
+							<div class="all-categories__item">
+								<div class="all-categories__img">
+									<a href="shop-col.html">
+										<img src="img/all-categories/07.jpg" alt="">
+									</a>
+								</div>
+								<div class="all-categories__body">
+									<a class="all-categories__body-title" href="shop-col.html">Coffee Percolators</a>
+									<div class="all-categories__body-descr">Discover the best Coffee Percolators in Best Sellers.</div>
+								</div>
+							</div>
+						</div>
+						<div class="all-categories__column">
+							<div class="all-categories__item">
+								<div class="all-categories__img">
+									<a href="shop-col.html">
+										<img src="img/all-categories/03.jpg" alt="">
+									</a>
+								</div>
+								<div class="all-categories__body">
+									<a class="all-categories__body-title" href="shop-col.html">roasted ground coffee</a>
+									<div class="all-categories__body-descr">The ground coffee beans roast level.</div>
+								</div>
+							</div>
+						</div>
+						<div class="all-categories__column">
+							<div class="all-categories__item">
+								<div class="all-categories__img">
+									<a href="shop-col.html">
+										<img src="img/all-categories/06.jpg" alt="">
+									</a>
+								</div>
+								<div class="all-categories__body">
+									<a class="all-categories__body-title" href="shop-col.html">Drip Coffee Makers</a>
+									<div class="all-categories__body-descr">Best Drip Coffee Makers for a Great Morning Brew, According to Reviews.</div>
 								</div>
 							</div>
 						</div>
