--- a/app/blocks/_footer.html
+++ b/app/blocks/_footer.html
@@ -25,7 +25,7 @@
 			<div class="footer__row">
 				<div class="footer__column footer__column--bg">
 					<div class="footer__title">WHAT WE ARE ABOUT</div>
-					<div class="footer__descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</div>
+					<div class="footer__descr">Many of our products are backed by a 3-year warranty for parts and labor, serviced by a dedicated team of customer support experts and in-house certified professionals for repairs and troubleshooting.</div>
 					<ul class="footer__links">
 						<li>Follow us on:</li>
 						<li><a href="#"><i class="icon-facebook"></i></a></li>
