--- a/app/contact-us.html
+++ b/app/contact-us.html
@@ -19,7 +19,7 @@
 						<div class="contact-us__column">
 							<div class="contact-us__contact">
 								<div class="contact-us__contact-title">Contact Us</div>
-								<div class="contact-us__contact-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software.</div>
+								<div class="contact-us__contact-descr">Please contact us using the online form below and we will respond as soon as possible.</div>
 							</div>
 							<div class="contact-us__offices">
 								<div class="contact-us__offices-title">Main offices</div>
@@ -49,8 +49,8 @@
 										</div>
 										<div class="contact-us__offices-body">
 											<div class="contact-us__offices-name">Website & email</div>
-											<a class="contact-us__offices-link" href="#">snstheme.com</a>
-											<a class="contact-us__offices-link" href="#">Infor@yourdomain.com</a>
+											<a class="contact-us__offices-link" href="mailto:hadona.com">hadona.com</a>
+											<a class="contact-us__offices-link" href="mailto:hadona@google.com">hadona@google.com</a>
 										</div>
 									</div>
 								</div>
