--- a/app/contact.html
+++ b/app/contact.html
@@ -18,7 +18,7 @@
 					<div class="contact__row">
 						<div class="contact__column">
 							<div class="contact__title">Contact Us</div>
-							<div class="contact__descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+							<div class="contact__descr">Please contact us using the online form below and we will respond as soon as possible.</div>
 							
 							<div class="contact__offices">
 								<div class="contact__offices-row">
